--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.8.3",
     "element-plus": "^2.2.13",
     "vue": "^3.2.13",
+    "vue-drawer-layout": "^1.3.0",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
